<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="4dp"
    android:background="@color/black_low_opacity">

    <EditText
        android:id="@+id/et_textinserter_addtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type_here"
        android:layout_centerInParent="true"
        android:textColor="@color/white"
        android:inputType="textMultiLine"
        android:autofillHints="Type Any" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_textinserter_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textAllCaps="false"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/btn_textinserter_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textAllCaps="false"
            android:text="@string/add" />

    </LinearLayout>

</RelativeLayout>